# neurones

./: README.md  pyproject.toml
examples/: mnist_train.py
src/neurones/: __init__.py  __main__.py  config.py  exceptions.py  logger.py
src/neurones/adapters/: __init__.py  base.py  claude.py  codex.py  detector.py  gemini.py
src/neurones/cli/: __init__.py  app.py  compare_cmd.py  orchestrate_cmd.py  run_cmd.py  status_cmd.py
src/neurones/core/: __init__.py  comparator.py  executor.py  orchestrator.py  utils.py
src/neurones/models/: __init__.py  config.py  result.py
src/neurones/output/: __init__.py  console.py  formatters.py
src/neurones/tui/: __init__.py  app.py  messages.py
src/neurones/tui/screens/: __init__.py  dashboard.py  settings.py
src/neurones/tui/styles/: neurones.tcss
src/neurones/tui/widgets/: __init__.py  agent_panel.py  agent_selector.py  orchestration_view.py  prompt_input.py  status_bar.py
tests/: conftest.py  test_codex_adapter.py  test_detector.py  test_executor.py  test_orchestrator.py
