[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurones"
version = "0.1.0"
description = "AI Agent Orchestrator — delegate tasks across Claude Code, Gemini CLI, and Codex CLI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=1.0",
    "pydantic>=2.0",
    "toml>=0.10",
    "json-repair>=0.30",
]

[project.urls]
Homepage = "https://github.com/Nisabatech/neurones"
Repository = "https://github.com/Nisabatech/neurones"
Issues = "https://github.com/Nisabatech/neurones/issues"

[project.scripts]
neurones = "neurones.cli.app:cli"
nr = "neurones.cli.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/neurones"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
